# SUPERMAGAnalysis

./: C08_4018  CAN_0  CAN_1  Cargo.toml  TODO  bound_coherent.py  plot_coverage.py  plot_pdfs.py  read_binary.py  sz_coherent.py
GSI/: 6014  6026  6027  6028  6029  6030  6031  6032  6033  6034  6035  6036  6037  6038  6039  6040  6041  6042  6043  6044  6045  6046  6047  6048  6049  6050  6051  6052  6053  6054  6055  6056  6057  6058  6059  6060  6061  6062  6063  6064  (+41 more)
py/: analysis.py  bound.py  power.py  testutils.py  utils.py
src/: IGRF_declinations_for_1sec.txt  constants.rs  lib.rs  main.rs  theory.rs  utils.rs  weights.rs
src/theory/: dark_photon.rs  mod.rs
src/utils/: async_balancer.rs  balancer.rs  coordinates.csv  coordinates.rs  fft.rs  igrf_decl.rs  io.rs  loader.rs  mod.rs  svd.rs  vec_sph.rs
