[package]
name = "supermag_analysis"
version = "0.1.0"
edition = "2021"
description = "This analysis pipeline closely follows (Michael A. Fedderke, Peter W. Graham, Derek F. Jackson Kimball, and Saarik Kalia 2021). We refer to this work as 'the paper' throuhout the codebase."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rayon = []

[dependencies]
csv = "1.1.6"
serde = "1.0.137" 
serde_derive = "1.0.137"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
anyhow = "1.0.57"
glob = "0.3.0"
mpi = { version = "0.6.0", path = "../../rustMPItest/" }
dashmap = { version = "5.3.4", features = ["rayon"] }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
goertzel-filter = "0.2.0"
rayon = "1.5.2"
sphrs = "0.1.3"
num-complex = "0.2.3"
num-traits = "0.2.15"
special = "0.8.1"
lazy_static = "1.4.0"
ndrustfft = "0.3.0"
parking_lot = "0.12.1"
