[package]
name = "supermag_analysis"
version = "0.1.0"
edition = "2021"
description = "This analysis pipeline closely follows (Michael A. Fedderke, Peter W. Graham, Derek F. Jackson Kimball, and Saarik Kalia 2021). We refer to this work as 'the paper' throuhout the codebase."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rayon = []

[dependencies]
csv = "1.1.6"
serde = "1.0.137" 
serde_derive = "1.0.137"
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
ndarray-npy = "0.8.1"
anyhow = "1.0.57"
glob = "0.3.0"
#mpi = { version = "0.6.0", path = "../rsmpi/" }
mpi = { version = "0.6.0", path = "../../rustMPItest/" }
dashmap = { version = "5.4.0", features = ["serde", "rayon"] }
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
goertzel-filter = "0.2.0"
rayon = "1.5.2"
# sphrs = "0.1.3"
sphrs = { git = "https://github.com/cavemanloverboy/sphrs/", features = ["serde"] }
num-complex = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.15"
special = "0.8.1"
lazy_static = "1.4.0"
ndrustfft = "0.3.0"
parking_lot = "0.12.1"
log = "0.4.17"
env_logger = "0.9.0"
itertools = "0.10.3"
nalgebra = "0.31.0"
serde_cbor = "0.11.2"
rustfft = "6.0.1"
interp1d = "0.2.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
num-format = "0.4.0"
indicatif = "0.17.1"
rocksdb = "0.19.0"
interp = "0.1.1"
quadrature = "0.1.2"
sysinfo = "0.26.7"
approx_eq = "0.1.8"
